manifests/infra/homepage/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage
  namespace: homepage
  annotations:
    gethomepage.dev/enabled: 'false' # Hide Homepage's own route from the dashboard
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: traefik
  hostnames:
    - homelab.olav.ninja
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: homepage
          kind: Service
          group: ""
          port: 3000
